Fixed the Chauffeur service response on mobile

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -283,6 +283,7 @@
     padding: var(--sectionPadding);
     overflow: hidden;
     background-color: #1a1a1a;
+    margin-bottom: -1px;
 
     .cs-container {
       width: 100%;
@@ -293,7 +294,6 @@
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
-      gap: (48/16rem);
     }
 
     .cs-content {
@@ -381,7 +381,7 @@
       display: block;
       position: absolute;
       top: 0;
-      bottom: (95/16rem);
+      bottom: (64/16rem);
       left: 0;
 
       img {
